Closed Bug 703818 Opened 13 years ago Closed 13 years ago

[ObjShrink] "Assertion failure: hasSlot() && !hasMissingSlot(),"

Categories

(Core :: JavaScript Engine, defect)

x86
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Assigned: bhackett1024)

References

Details

(Keywords: assertion, testcase)

Object.defineProperty(Namespace.prototype, "toString", { enumerable: true }) asserts js debug shell on JM changeset a335853be219 without any CLI arguments at Assertion failure: hasSlot() && !hasMissingSlot(),
Misuse of shape->slot() within an assertion, shape->maybeSlot() should have been used instead. https://hg.mozilla.org/projects/jaegermonkey/rev/198c47f803c1
Assignee: general → blackconnect
Status: NEW → RESOLVED
Closed: 13 years ago
Component: JavaScript Engine → Java-Implemented Plugins
QA Contact: general → blackconnect
Resolution: --- → FIXED
Assignee: blackconnect → bhackett1024
Component: Java-Implemented Plugins → JavaScript Engine
QA Contact: blackconnect → general
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/bug703818.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.