Fix misuse of shape->slot(), bug 703818.